[package]
name = "shkeleton"
version = "0.13.1"
authors = ["Artem Shein <artem.shein@aisys.ru>"]
edition = "2021"

description = "Skeleton rust project"
repository = "https://github.com/artemshein/shkeleton"
categories = ["development-tools"]
license = "MIT"

[dependencies]
sherr = "0.5.2"
byteorder = "1.4.3"
lazy_static = "1.4.0"
array_tool = "1.0.3"
itertools = "0.10.3"
iterator-ext = "0.2.1"
regex = "1.6.0"
url = "2.2.2"
percent-encoding = "2.1.0"
derive_more = "0.99.17"
derive_deref = "1.1.1"
chrono = "0.4.19"
dirs = "4.0.0"
fstrings = "0.2.3"
clap = { version = "2.34.0", optional = true }
num_cpus = { version = "1.13.1", optional = true }
parking_lot = { version = "0.12.1", optional = true }
glob = { version = "0.3.0", optional = true }
crossbeam = { version = "0.8.1", optional = true }

[features]
default = []
cli = ["clap", "glob", "sherr/impl"]
concurrency = ["crossbeam", "num_cpus", "parking_lot"]
deadlock_detection = ["parking_lot/deadlock_detection"]
